kubernetes/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snapscroll-vue
spec:
  selector:
    app.kubernetes.io/name: snapscroll-vue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
