kubernetes/web/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-snapscroll-vue
  annotations:
    spec.ingressClassName: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
  - host: photos.dszymanski.pl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: snapscroll-vue
            port:
              number: 80
  tls:
    - secretName: snapscroll-tls
      hosts:
        - photos.dszymanski.pl
